--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Prisma Events Registration",
-  "short_name": "Prisma Registration",
+  "name": "Wada Registration",
+  "short_name": "Wada Registration",
   "icons": [
     {
       "src": "./favicon.ico",
