--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "motion": "^11.16.0",
     "next": "^14.2.15",
     "react": "^18",
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18",
-    "react-icons": "^5.3.0",
-    "motion": "^11.16.0"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
